--- a/localhost/site/modules/ModuleAdmin/views/album/index.phtml
+++ b/localhost/site/modules/ModuleAdmin/views/album/index.phtml
@@ -1,3 +1,7 @@
+<div class="alert alert-info">
+  URL Base: <?php echo $this->baseUrl(); ?>
+</div>
+
 <!-- The content created automatically -->
 <div class="row">
   <div class="col-6">
