--- a/localhost/site/modules/ModuleDefault/views/layout.phtml
+++ b/localhost/site/modules/ModuleDefault/views/layout.phtml
@@ -12,7 +12,11 @@
   </head>
   <body>
     <div class="container">
-      <h1>ModuleDefault</h1>
+      <h1>
+        <a href="<?php echo $this->baseUrl('/'); ?>">
+          ModuleDefault
+        </a>
+      </h1>
       <h4>Created by SuitUp Manager Version: 1.0.2</h4>
 
       <?php echo $content; ?>
