Creating a little project that makes some sense

--- a/localhost/site/modules/ModuleDefault/views/index/index.phtml
+++ b/localhost/site/modules/ModuleDefault/views/index/index.phtml
@@ -1,23 +1,60 @@
 <!-- The content created automatically -->
 <div class="row">
-  <div class="col-6">
+
+  <div class="col-4 mb-3">
     <div class="card">
-      <img class="card-img-top" src="holder.js/100px180/" alt="Card image cap">
+      <img class="card-img-top" src="<?php echo $this->baseUrl('/assets/artista/johnny-cash.jpg'); ?>" alt="Card image cap">
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+        <h5 class="card-title">Johnny Cash</h5>
+        <p class="card-text">
+          I keep a close watch on this heart of mine
+          <br/>
+          I keep my eyes wide...
+        </p>
+        <a href="<?php echo $this->baseUrl('/album?id=johnny-cash'); ?>" class="btn btn-primary">Ver músicas</a>
       </div>
     </div>
   </div>
-  <div class="col-6">
+
+  <div class="col-4 mb-3">
     <div class="card">
-      <img class="card-img-top" src="holder.js/100px180/" alt="Card image cap">
+      <img class="card-img-top" src="<?php echo $this->baseUrl('/assets/artista/natiruts.jpg'); ?>" alt="Card image cap">
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+        <h5 class="card-title">Natiruts</h5>
+        <p class="card-text">Quero te mostrar um mundo novo de cores...</p>
+        <a href="<?php echo $this->baseUrl('/album?id=natiruts'); ?>" class="btn btn-primary">Ver músicas</a>
       </div>
     </div>
   </div>
+
+  <div class="col-4 mb-3">
+    <div class="card">
+      <img class="card-img-top" src="<?php echo $this->baseUrl('/assets/artista/ac-dc.jpg'); ?>" alt="Card image cap">
+      <div class="card-body">
+        <h5 class="card-title">AC DC</h5>
+        <p class="card-text">
+          This is black in black
+          <br/>
+          This is AC DC!
+        </p>
+        <a href="<?php echo $this->baseUrl('/album?id=ac-dc'); ?>" class="btn btn-primary">Ver músicas</a>
+      </div>
+    </div>
+  </div>
+
+  <div class="col-4 mb-3">
+    <div class="card">
+      <img class="card-img-top" src="<?php echo $this->baseUrl('/assets/artista/bob-marley.jpg'); ?>" alt="Card image cap">
+      <div class="card-body">
+        <h5 class="card-title">Bob Marley</h5>
+        <p class="card-text">
+          Africa UNITE!
+          <br/>
+          Get Up, Stand up!
+        </p>
+        <a href="<?php echo $this->baseUrl('/album?id=bob-marley'); ?>" class="btn btn-primary">Ver músicas</a>
+      </div>
+    </div>
+  </div>
+
 </div>
