--- a/localhost/site/modules/ModuleDefault/views/album/index.phtml
+++ b/localhost/site/modules/ModuleDefault/views/album/index.phtml
@@ -1,24 +1,25 @@
-<!-- The content created automatically -->
-<div class="row">
-  <div class="col-6">
-    <div class="card">
-      <img class="card-img-top" src="holder.js/100px180/" alt="Card image cap">
-      <div class="card-body">
-        <h5 class="card-title">AlbumController</h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
-      </div>
-    </div>
-  </div>
-  <div class="col-6">
-    <div class="card">
-      <img class="card-img-top" src="holder.js/100px180/" alt="Card image cap">
-      <div class="card-body">
-        <h5 class="card-title">AlbumController</h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
-      </div>
-    </div>
-  </div>
-</div>
+<hr/>
+<h3><?php echo strtoupper(str_replace('-', ' ', $this->getParam('id'))); ?></h3>
 
+<table class="table table-striped table-condensed">
+  <thead>
+    <tr>
+      <th scope="col"></th>
+      <th scope="col">Nome</th>
+      <th scope="col">Duração</th>
+      <th scope="col" style="width: 100px;"></th>
+    </tr>
+  </thead>
+  <tbody>
+    <?php for($i=1; $i<=10; $i++): ?>
+      <tr>
+        <td scope="row">#<?php echo $i; ?></td>
+        <td>Nome da musica</td>
+        <td>3:52</td>
+        <td class="text-center">
+          <a href="#" class="btn btn-sm btn-danger"><i class="fa fa-trash-alt"></i></a>
+        </td>
+      </tr>
+    <?php endfor; ?>
+  <tbody>
+</table>
