--- a/localhost/site/modules/ModuleDefault/views/layout.phtml
+++ b/localhost/site/modules/ModuleDefault/views/layout.phtml
@@ -17,7 +17,18 @@
           ModuleDefault
         </a>
       </h1>
-      <h4>Created by SuitUp Manager Version: 1.0.2</h4>
+      <h5>Suitup Framework Version: <?php echo SuitupStart::VERSION; ?></h5>
+
+      <!-- System messages -->
+      <?php foreach ($messages as $type => $msgs): ?>
+        <div class="alert alert-<?php echo $type; ?>">
+          <a href="#" class="close">&times;</a>
+          <?php foreach ($msgs as $msg): ?>
+            <p class="m-0"><i class="fa fa-check"></i> <?php echo $msg; ?></p>
+          <?php endforeach; ?>
+        </div>
+      <?php endforeach; ?>
+      <!-- /System messages -->
 
       <?php echo $content; ?>
     </div>
@@ -27,6 +38,7 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/holder/2.9.0/holder.js"></script>
   </body>
 </html>
