Creating a little project that makes some sense

--- a/localhost/site/modules/ModuleDefault/views/index/index.phtml
+++ b/localhost/site/modules/ModuleDefault/views/index/index.phtml
@@ -11,7 +11,7 @@
           <br/>
           I keep my eyes wide...
         </p>
-        <a href="<?php echo $this->baseUrl('/album?id=johnny-cash'); ?>" class="btn btn-primary">Ver músicas</a>
+        <a href="<?php echo $this->baseUrl('/album-detalhe/93137/johnny-cash.html'); ?>" class="btn btn-primary">Ver músicas</a>
       </div>
     </div>
   </div>
@@ -22,7 +22,7 @@
       <div class="card-body">
         <h5 class="card-title">Natiruts</h5>
         <p class="card-text">Quero te mostrar um mundo novo de cores...</p>
-        <a href="<?php echo $this->baseUrl('/album?id=natiruts'); ?>" class="btn btn-primary">Ver músicas</a>
+        <a href="<?php echo $this->baseUrl('/album-detalhe/979311/natiruts.html'); ?>" class="btn btn-primary">Ver músicas</a>
       </div>
     </div>
   </div>
@@ -37,7 +37,7 @@
           <br/>
           This is AC DC!
         </p>
-        <a href="<?php echo $this->baseUrl('/album?id=ac-dc'); ?>" class="btn btn-primary">Ver músicas</a>
+        <a href="<?php echo $this->baseUrl('/album-detalhe/65as4df/ac-dc.html'); ?>" class="btn btn-primary">Ver músicas</a>
       </div>
     </div>
   </div>
@@ -52,7 +52,7 @@
           <br/>
           Get Up, Stand up!
         </p>
-        <a href="<?php echo $this->baseUrl('/album?id=bob-marley'); ?>" class="btn btn-primary">Ver músicas</a>
+        <a href="<?php echo $this->baseUrl('/album-detalhe/6a54sd/bob-marley.html'); ?>" class="btn btn-primary">Ver músicas</a>
       </div>
     </div>
   </div>
