--- a/localhost/site/modules/ModuleDefault/views/album/index.phtml
+++ b/localhost/site/modules/ModuleDefault/views/album/index.phtml
@@ -1,5 +1,8 @@
 <hr/>
-<h3><?php echo strtoupper(str_replace('-', ' ', $this->getParam('id'))); ?></h3>
+<h3>
+  #<?php echo $this->getParam('id'); ?>
+  - <?php echo strtoupper(str_replace('-', ' ', $this->getParam('name'))); ?>
+</h3>
 
 <table class="table table-striped table-condensed">
   <thead>
