--- a/localhost/site/modules/ModuleDefault/views/index/index.phtml
+++ b/localhost/site/modules/ModuleDefault/views/index/index.phtml
@@ -1,9 +1,9 @@
-<!-- The content created automatically -->
+
 <div class="row">
 
   <div class="col-4 mb-3">
     <div class="card">
-      <img class="card-img-top" src="<?php echo $this->baseUrl('/assets/artista/johnny-cash.jpg'); ?>" alt="Card image cap">
+      <img class="card-img-top" src="<?php echo $this->basePath('/assets/artista/johnny-cash.jpg'); ?>" alt="Card image cap">
       <div class="card-body">
         <h5 class="card-title">Johnny Cash</h5>
         <p class="card-text">
@@ -18,7 +18,7 @@
 
   <div class="col-4 mb-3">
     <div class="card">
-      <img class="card-img-top" src="<?php echo $this->baseUrl('/assets/artista/natiruts.jpg'); ?>" alt="Card image cap">
+      <img class="card-img-top" src="<?php echo $basePath; ?>/assets/artista/natiruts.jpg" alt="Card image cap">
       <div class="card-body">
         <h5 class="card-title">Natiruts</h5>
         <p class="card-text">Quero te mostrar um mundo novo de cores...</p>
@@ -29,7 +29,7 @@
 
   <div class="col-4 mb-3">
     <div class="card">
-      <img class="card-img-top" src="<?php echo $this->baseUrl('/assets/artista/ac-dc.jpg'); ?>" alt="Card image cap">
+      <img class="card-img-top" src="<?php echo $this->basePath(); ?>/assets/artista/ac-dc.jpg" alt="Card image cap">
       <div class="card-body">
         <h5 class="card-title">AC DC</h5>
         <p class="card-text">
@@ -44,7 +44,7 @@
 
   <div class="col-4 mb-3">
     <div class="card">
-      <img class="card-img-top" src="<?php echo $this->baseUrl('/assets/artista/bob-marley.jpg'); ?>" alt="Card image cap">
+      <img class="card-img-top" src="<?php echo $this->basePath; ?>/assets/artista/bob-marley.jpg" alt="Card image cap">
       <div class="card-body">
         <h5 class="card-title">Bob Marley</h5>
         <p class="card-text">
