--- a/localhost/site/modules/ModuleAdmin/views/album/index.phtml
+++ b/localhost/site/modules/ModuleAdmin/views/album/index.phtml
@@ -1,28 +1,26 @@
-<div class="alert alert-info">
-  URL Base: <?php echo $this->baseUrl(); ?>
-</div>
+<hr/>
+<h3>
+  #<?php echo $this->getParam('id'); ?>
+  - <?php echo strtoupper(str_replace('-', ' ', $this->getParam('name'))); ?>
+</h3>
 
-<!-- The content created automatically -->
-<div class="row">
-  <div class="col-6">
-    <div class="card">
-      <img class="card-img-top" src="holder.js/100px180/" alt="Card image cap">
-      <div class="card-body">
-        <h5 class="card-title">AlbumController</h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
-      </div>
-    </div>
-  </div>
-  <div class="col-6">
-    <div class="card">
-      <img class="card-img-top" src="holder.js/100px180/" alt="Card image cap">
-      <div class="card-body">
-        <h5 class="card-title">AlbumController</h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
-      </div>
-    </div>
-  </div>
-</div>
-
+<table class="table table-striped table-condensed">
+  <thead>
+    <tr>
+      <th scope="col" style="width: 100px;"></th>
+      <th scope="col">Nome</th>
+      <th scope="col">Ano</th>
+      <th scope="col">Duração</th>
+    </tr>
+  </thead>
+  <tbody>
+    <?php for($i=1; $i<=10; $i++): ?>
+      <tr>
+        <td scope="row">#<?php echo $i; ?></td>
+        <td>Nome da musica</td>
+        <td>1965</td>
+        <td>3:52</td>
+      </tr>
+    <?php endfor; ?>
+  <tbody>
+</table>
