--- a/localhost/site/modules/ModuleDefault/views/album/index.phtml
+++ b/localhost/site/modules/ModuleDefault/views/album/index.phtml
@@ -7,10 +7,10 @@
 <table class="table table-striped table-condensed">
   <thead>
     <tr>
-      <th scope="col"></th>
-      <th scope="col">Nome</th>
-      <th scope="col">Duração</th>
       <th scope="col" style="width: 100px;"></th>
+      <th scope="col">Nome</th>
+      <th scope="col">Ano</th>
+      <th scope="col">Duração</th>
     </tr>
   </thead>
   <tbody>
@@ -18,10 +18,8 @@
       <tr>
         <td scope="row">#<?php echo $i; ?></td>
         <td>Nome da musica</td>
+        <td>1965</td>
         <td>3:52</td>
-        <td class="text-center">
-          <a href="#" class="btn btn-sm btn-danger"><i class="fa fa-trash-alt"></i></a>
-        </td>
       </tr>
     <?php endfor; ?>
   <tbody>
