Namespace must to keep SuitUp instead of Suitup

--- a/localhost/site/modules/ModuleAdmin/views/layout.phtml
+++ b/localhost/site/modules/ModuleAdmin/views/layout.phtml
@@ -32,7 +32,7 @@
           ModuleAdmin
         </a>
       </h1>
-      <h4>Suitup Framework Version: <?php echo SuitupStart::VERSION; ?></h4>
+      <h4>Suitup Framework Version: <?php echo SuitUpStart::VERSION; ?></h4>
       
       <?php echo $content; ?>
     </div>
