--- a/localhost/site/modules/ModuleDefault/views/layout.phtml
+++ b/localhost/site/modules/ModuleDefault/views/layout.phtml
@@ -18,7 +18,7 @@
       <h1>
         <a href="<?php echo $this->baseUrl('/'); ?>">ModuleDefault</a>
       </h1>
-      <h5>Suitup Framework Version: <?php echo SuitupStart::VERSION; ?></h5>
+      <h5>Suitup Framework Version: <?php echo SuitUpStart::VERSION; ?></h5>
 
       <!-- System messages -->
       <?php foreach ($messages as $type => $msgs): ?>
