Setting up a real project

--- a/localhost/site/modules/ModuleDefault/views/index/index.phtml
+++ b/localhost/site/modules/ModuleDefault/views/index/index.phtml
@@ -1,60 +1,17 @@
 
 <div class="row">
-
-  <div class="col-4 mb-3">
-    <div class="card">
-      <img class="card-img-top" src="<?php echo $this->basePath('/assets/artista/johnny-cash.jpg'); ?>" alt="Card image cap">
-      <div class="card-body">
-        <h5 class="card-title">Johnny Cash</h5>
-        <p class="card-text">
-          I keep a close watch on this heart of mine
-          <br/>
-          I keep my eyes wide...
-        </p>
-        <a href="<?php echo $this->baseUrl('/album-detalhe/93137/johnny-cash.html'); ?>" class="btn btn-primary">Ver músicas</a>
+  <?php if ($artists): ?>
+    <?php foreach($artists as $item): ?>
+      <div class="col-4 mb-3">
+        <div class="card">
+          <!--<img class="card-img-top" src="<?php echo $this->basePath('/assets/artista/johnny-cash.jpg'); ?>" alt="Card image cap">-->
+          <div class="card-body">
+            <h5 class="card-title"><?php echo $item['name']; ?></h5>
+            <a href="<?php echo $this->baseUrl(); ?>/albums/<?php echo $item['pk_artist']; ?>/<?php echo strtolower(toDashCase($item['name'])); ?>.html" class="btn btn-primary">Ver músicas</a>
+          </div>
+        </div>
       </div>
-    </div>
-  </div>
-
-  <div class="col-4 mb-3">
-    <div class="card">
-      <img class="card-img-top" src="<?php echo $basePath; ?>/assets/artista/natiruts.jpg" alt="Card image cap">
-      <div class="card-body">
-        <h5 class="card-title">Natiruts</h5>
-        <p class="card-text">Quero te mostrar um mundo novo de cores...</p>
-        <a href="<?php echo $this->baseUrl('/album-detalhe/979311/natiruts.html'); ?>" class="btn btn-primary">Ver músicas</a>
-      </div>
-    </div>
-  </div>
-
-  <div class="col-4 mb-3">
-    <div class="card">
-      <img class="card-img-top" src="<?php echo $this->basePath(); ?>/assets/artista/ac-dc.jpg" alt="Card image cap">
-      <div class="card-body">
-        <h5 class="card-title">AC DC</h5>
-        <p class="card-text">
-          This is black in black
-          <br/>
-          This is AC DC!
-        </p>
-        <a href="<?php echo $this->baseUrl('/album-detalhe/65as4df/ac-dc.html'); ?>" class="btn btn-primary">Ver músicas</a>
-      </div>
-    </div>
-  </div>
-
-  <div class="col-4 mb-3">
-    <div class="card">
-      <img class="card-img-top" src="<?php echo $this->basePath; ?>/assets/artista/bob-marley.jpg" alt="Card image cap">
-      <div class="card-body">
-        <h5 class="card-title">Bob Marley</h5>
-        <p class="card-text">
-          Africa UNITE!
-          <br/>
-          Get Up, Stand up!
-        </p>
-        <a href="<?php echo $this->baseUrl('/album-detalhe/6a54sd/bob-marley.html'); ?>" class="btn btn-primary">Ver músicas</a>
-      </div>
-    </div>
-  </div>
+    <?php endforeach; ?>
+  <?php endif; ?>
 
 </div>
