--- a/localhost/site/modules/ModuleDefault/views/index/index.phtml
+++ b/localhost/site/modules/ModuleDefault/views/index/index.phtml
@@ -14,4 +14,8 @@
     <?php endforeach; ?>
   <?php endif; ?>
 
+  <div class="col-12">
+    <?php echo $this->paginateControl($artists, 'paginator.phtml'); ?>
+  </div>
+
 </div>
